# Regression_ML_EndtoEnd

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: app_config.yml  ge_expectations.yml  mlflow_config.yml
models/: freq_encoder.pkl  target_encoder.pkl  xgb_model.pkl  xgboost_best_model.pkl
notebooks/: 00_data_split.ipynb  02_feature_eng_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoo 05_XGBoost.ipynbst.ipynb  06_hyperparameter_tuning_MLFlow.ipynb  07_S3_push_datasets_AWS.ipynb
src/feature_pipeline/: feature_engineering.py  preprocess.py
tests/: smoke_test.ipynb  test_training.py
