[project]
name = "regression-ml-endtoend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.31",
    "category-encoders>=2.9.0",
    "dvc>=3.67.1",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "protobuf==3.20.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "setuptools<81",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
